database changes for deployment

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,3 +9,14 @@ development:
   password: postgres
   port: 5432
   reconnect: true
+
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: pro_attorney
+  host: localhost
+  pool: 5
+  username: postgres
+  password: postgres
+  port: 5432
+  reconnect: true
